# django_react_auth

./: README.md
backend/: pyproject.toml  requirements.txt
backend/api/: serializes.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  LoadingIndicator.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx  Register.jsx
