[project]
name = "django-react-auth"
version = "0.1.0"
description = ""
authors = [
    {name = "lmbelo",email = "lucas.belo@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (>=3.8.1,<4.0.0)",
    "django (>=5.1.6,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false